--- a/src/component/NavBar.css
+++ b/src/component/NavBar.css
@@ -5,6 +5,9 @@
     position: relative;
     top: 0px;
 }
+.greybg{
+    background-color:rgb(223, 223, 223);
+}
 .txt-left{
     text-align: left;
 }
