--- a/src/component/NavBar.css
+++ b/src/component/NavBar.css
@@ -1,7 +1,7 @@
 .bar{
     
     background-color:rgb(223, 223, 223);
-    height: 200%;
+    height: 450px;
     position: relative;
     top: 0px;
 }
